--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
   <section class="container">
     <h2>Galéria – munkáinkból</h2>
     <div class="gallery">
-      <img src="assets/gallery1.jpg" alt="Autómentés – kép 1">
-      <img src="assets/gallery2.jpg" alt="Autómentés – kép 2">
-      <img src="assets/gallery3.jpg" alt="Autómentés – kép 3">
-      <img src="assets/gallery4.jpg" alt="Autómentés – kép 4">
+      <img src="gallery1.jpg" alt="Autómentés – kép 1">
+      <img src="gallery2.jpg" alt="Autómentés – kép 2">
+      <img src="gallery3.jpg" alt="Autómentés – kép 3">
+      <img src="gallery4.jpg" alt="Autómentés – kép 4">
     </div>
   </section>
 
