--- a/index.html
+++ b/index.html
@@ -168,6 +168,30 @@
     </div>
   </section>
 
+<section class="container" id="faq">
+  <h2 data-i18n="faq_title">Gyakran ismételt kérdések</h2>
+  <div class="grid">
+    <div class="card">
+      <h3 data-i18n="faq_q1">⏱️ Mennyi idő alatt érkeztek ki?</h3>
+      <p class="muted" data-i18n="faq_a1">Általában 20–40 percen belül a helyszínen vagyunk, forgalomtól függően.</p>
+    </div>
+    <div class="card">
+      <h3 data-i18n="faq_q2">💰 Mennyibe kerül az autómentés?</h3>
+      <p class="muted" data-i18n="faq_a2">Az ár függ a távolságtól és a jármű típusától. Korrekt, előre egyeztetett díjakat adunk.</p>
+    </div>
+    <div class="card">
+      <h3 data-i18n="faq_q3">🌍 Külföldről is hívhatlak?</h3>
+      <p class="muted" data-i18n="faq_a3">Sajnos jelenleg csak Magyarországon mentünk.</p>
+    </div>
+    <div class="card">
+      <h3 data-i18n="faq_q4">🏍️ Csak autót szállítotok?</h3>
+      <p class="muted" data-i18n="faq_a4">Nem, motort és veterán járműveket is.</p>
+    </div>
+  </div>
+</section>
+
+
+
   <!-- KAPCSOLAT -->
   <section class="container" id="contact">
     <h2>Kapcsolat</h2>
