--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title data-i18n="meta_title">Buki Autómentés 0-24 – Gyors segítség, bárhol, bármikor</title>
   <meta name="description" data-i18n-attr="content:meta_desc" content="Autómentés 0-24, országos lefedettséggel. Hívj most: +36 30 012 3690.">
-  <style>
+
+ <!-- Favicons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+  <link rel="manifest" href="favicons/site.webmanifest">
+  <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#f7b500">
+  <meta name="msapplication-TileColor" content="#0b0b0b">
+  <meta name="theme-color" content="#0b0b0b">  
+
+<style>
     :root{ --bg:#0b0b0b; --card:#121212; --ink:#f4f4f4; --muted:#b3b3b3; --accent:#f7b500; --stroke:#1f1f1f; }
     *{box-sizing:border-box} html,body{margin:0;padding:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Helvetica,Arial,sans-serif;scroll-behavior:smooth}
     a{color:inherit;text-decoration:none}
